exports[`modules/flattenStyle should merge style objects 1`] = `
Object {
  "opacity": 1,
  "order": 2,
}
`;

exports[`modules/flattenStyle should override style properties 1`] = `
Object {
  "backgroundColor": "#023c69",
  "order": null,
}
`;

exports[`modules/flattenStyle should overwrite properties with \`undefined\` 1`] = `
Object {
  "backgroundColor": undefined,
}
`;

exports[`modules/flattenStyle should recursively flatten arrays 1`] = `
Object {
  "opacity": 1,
  "order": 3,
}
`;
